language switch implemented

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@hotjar/browser": "^1.0.9",
 		"@supabase/supabase-js": "^2.49.4",
 		"supabase": "^2.20.12",
+		"svelte-flags": "^2.0.1",
 		"svelte-typewrite": "^3.0.0",
 		"svelte-typewriter": "^3.2.3"
 	}
